--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "packager": "electron-packager ./ flappyBrid --platform=win32 --arch=x64 --overwrite --ignore=node_modules --icon=./app/img/icon.ico"
+    "packager": "electron-packager ./ flappyBrid --platform=linux --arch=x64 --overwrite --ignore=node_modules --icon=./app/img/icon.ico"
   },
   "repository": "https://github.com/wodb/electron-electron-packager-demo.git",
   "keywords": [
